// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body1Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body1Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body1SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body1SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body2Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body2Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Body2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading2, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading2, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading3, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Heading3, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Labels, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : Labels, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2Bold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2Bold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2Italic, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2Italic, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "auto",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : auto, TextVariant prop : SubTitle2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "auto",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body1Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body1Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body1SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body1SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body2Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body2Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Body2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading2, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading2, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading3, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Heading3, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Labels, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : Labels, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2Bold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2Bold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2Italic, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2Italic, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "center",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : center, TextVariant prop : SubTitle2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "center",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body1Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body1Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body1SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body1SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body2Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body2Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Body2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading2, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading2, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading3, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Heading3, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Labels, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : Labels, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2Bold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2Bold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2Italic, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2Italic, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "justify",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : justify, TextVariant prop : SubTitle2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "justify",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body1Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body1Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body1SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body1SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body2Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body2Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Body2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading2, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading2, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading3, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Heading3, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Labels, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : Labels, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2Bold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2Bold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2Italic, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2Italic, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "left",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : left, TextVariant prop : SubTitle2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "left",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body1Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body1Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 18,
        "fontWeight": "normal",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body1SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body1SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body2Regular, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body2Regular, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontWeight": "normal",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Body2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 16,
        "fontWeight": "600",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 72,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 60,
        "fontWeight": "bold",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading2, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading2, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 64,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 48,
        "fontWeight": "bold",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading3, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Heading3, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 48,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 40,
        "fontWeight": "normal",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Labels, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : Labels, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 24,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 15,
        "fontWeight": "600",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle1, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle1, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 40,
      },
      {
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 28,
        "fontWeight": "600",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2Bold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2Bold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "bold",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2Italic, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2Italic, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-Italic",
        "fontSize": 21,
        "fontWeight": "normal",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2SemiBold, color prop :#C0DBBF, underline prop :2, numberOfLine prop :false 1`] = `
<Text
  numberOfLines={2}
  style={
    [
      {
        "color": "#C0DBBF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "right",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;

exports[`AppText Component should render correctly should render correctly with TextAlignment prop : right, TextVariant prop : SubTitle2SemiBold, color prop :#E9ECEF, underline prop :1, numberOfLine prop :true 1`] = `
<Text
  numberOfLines={1}
  style={
    [
      {
        "color": "#E9ECEF",
        "lineHeight": 28,
      },
      {
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 21,
        "fontWeight": "600",
        "textAlign": "right",
        "textDecorationLine": "underline",
      },
    ]
  }
  testID="AppTextTestID"
>
  Dummy Text
</Text>
`;
